/***********************************************************************
 X3 ChangeLog

2006-07-11  Alex Schumann  <rubin@afternet.org>

	* x3.conf.example: Improved server/type setting documentation,
	and changed default to 5.

2006-07-11  Alex Schumann  <rubin@afternet.org>

	* src/opserv.c: fixed silent alerts not getting picked up from db file
	on read/load.

2006-07-11  Alex Schumann  <rubin@afternet.org>

	* src/opserv.c: add sanity checking to jupe to avoid catastrophic loop
	when adding an invalid jupe servername or numeric.
	this closes bug number 1513510.

	* src/modcmd.c: if pubcmd is set higher than your level, only respond
	with the denied msg if the command was actually found. this closes bug
	number 1509382.

2006-07-10  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.c: fixed crash bug trying to deref the handleinfo of a
	non-logged-in user (null pointer)

2006-07-09  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: fixed bug where unignores were getting sent to the
	user multiple times, instead of to each online nick once.

2006-07-09  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: Fixes for addignore/delignore corruption +missed a
	spot. Ugh, messed up the fix. Trying again :)

2006-07-10  Neil Spierling <sirvulcan@gmail.com>

	* src/chanserv.c: INVITE now checks the targets ignore/silence list.
	If the target is ignoring the person inviting them then the invite
	is denied.

2006-07-07  Alex Schumann  <rubin@afternet.org>

	* src/mod-memoserv.c: pLaYa reported a crash/corruption bug in
	memoserv most easily seen when sending short memos. Rewrote the flag
	handling part of memo send to correct it.

2006-07-05  Alex Schumann  <rubin@afternet.org>

	* src/helpfile.c: pLaYa pointed out the table code row count is off by
	one. Fixed.

2006-06-27  Neil Spierling <sirvulcan@gmail.com>

	* configure: Regenerated.

	* configure.in: Make use of TRE regexp library. Its more powerful