@@ -3,6 +3,9 @@
 
 2006-07-11  Alex Schumann  <rubin@afternet.org>
 
+	* src/chanserv.c: Fixed some weirdness with nef 1.0's 2nd topic setter
+	and some x3 topic functions.
+
 	* x3.conf.example: Improved server/type setting documentation,
 	and changed default to 5.
 
